[package]
name = "my_bevy_game_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy_input_mapper = "0.0.1"
bevy_panorbit_camera = "0.8.0"
